crates/review-buddy/tests/snapshots/frames_v02__frame_first_run_6_jax_liminal_hq_100x30.snap
---
source: crates/review-buddy/tests/frames_v02.rs
expression: text(& render(& mut app))
---
 review buddy  ·  first run                                                                    Dusk










           ╭ 4 · A little company ──────────────────────────────────────────────────────╮
           │ Jax is a small otter who keeps you company in a corner of the screen. He   │
           │ stays out of the way.                                                      │
           │                                                                            │
           │ [x] Keep Jax around  (J or space)                                          │
           │                                                                            │
           │ [ Back ]  [ Continue ⏎ ]  [ Skip for now · esc ]                           │
           ╰────────────────────────────────────────────────────────────────────────────╯










 ⏎ continue  space pick  esc skip for now
