crates/review-buddy/tests/snapshots/frames_v02__frame_first_run_6_jax_no_color_160x40.snap
---
source: crates/review-buddy/tests/frames_v02.rs
expression: plain_dump(& mut app)
---
 review buddy  ·  first run                                                                                                                                Dusk















                                         ╭ 4 · A little company ──────────────────────────────────────────────────────╮
                                         │ Jax is a small otter who keeps you company in a corner of the screen. He   │
                                         │ stays out of the way.                                                      │
                                         │                                                                            │
                                         │ [x] Keep Jax around  (J or space)                                          │
                                         │                                                                            │
                                         │ [ Back ]  [ Continue ⏎ ]  [ Skip for now · esc ]                           │
                                         ╰────────────────────────────────────────────────────────────────────────────╯















 ⏎ continue  space pick  esc skip for now

-- modifiers --
0:1 B "review buddy"
0:13 D "  ·  first run"
0:154 D " Dusk"
16:41 B "╭ 4 · A little company ──────────────────────────────────────────────────────╮"
17:41 B "│"
17:43 D "Jax is a small otter who keeps you company in a corner of the screen. He"
17:118 B "│"
18:41 B "│"
18:43 D "stays out of the way."
18:118 B "│"
19:41 B "│"
19:118 B "│"
20:41 B "│"
20:43 R "[x]"
20:47 BR "Keep Jax around"
20:62 DR "  (J or space)"
20:118 B "│"
21:41 B "│"
21:118 B "│"
22:41 B "│"
22:43 D "[ Back ]"
22:53 B "[ Continue ⏎ ]"
22:69 D "[ Skip for now · esc ]"
22:118 B "│"
23:41 B "╰────────────────────────────────────────────────────────────────────────────╯"
39:1 B "⏎"
39:2 D " continue"
39:13 B "space"
39:18 D " pick"
39:25 B "esc"
39:28 D " skip for now"
